--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
         .btn { display: none; align-items: center; justify-content: center; gap: 10px; padding: 16px 24px; border: 1px solid #c9a84c44; border-radius: 8px; background: linear-gradient(135deg, #1a1a2e, #16162a); color: #e8dcc8; text-decoration: none; font-size: 15px; font-weight: 500; transition: all 0.3s ease; letter-spacing: 1px; cursor: pointer; width: 100%; }
         .btn.active { display: flex; }
         .btn.playing { border-color: #c9a84c; box-shadow: 0 0 20px rgba(201, 168, 76, 0.2); }
-        .btn.loading-audio { border-color: #c9a84c88; }
         .btn:hover { background: linear-gradient(135deg, #2a2a3e, #20203a); border-color: #c9a84c88; box-shadow: 0 0 20px rgba(201, 168, 76, 0.15); transform: translateY(-1px); }
         .btn .icon { font-size: 18px; }
         .footer { margin-top: 40px; padding-top: 24px; }
@@ -193,14 +192,47 @@
         /* ── 오디오 관리 ── */
         var audioPlayers = {};
         var audioLoaded = {};
+        var audioLoading = {};
         var audioFileIds = {};
         var playerIntervals = {};
+        var pendingPlay = {};
 
         function formatTime(sec) {
             if (!sec || isNaN(sec)) return '0:00';
             var m = Math.floor(sec / 60);
             var s = Math.floor(sec % 60);
             return m + ':' + (s < 10 ? '0' : '') + s;
+        }
+
+        /* ★ 페이지 로딩 시 모든 음원을 백그라운드에서 미리 불러옴 */
+        function preloadAllAudio() {
+            ['theme', 'voice', 'healing'].forEach(function(type) {
+                var fileId = audioFileIds[type];
+                if (!fileId) return;
+                audioLoading[type] = true;
+                fetch(PROXY_URL + '?id=' + fileId)
+                    .then(function(r) { return r.json(); })
+                    .then(function(data) {
+                        audioLoading[type] = false;
+                        if (data.error) { console.error('Preload error:', data.error); return; }
+                        var audio = new Audio(data.uri);
+                        audio.preload = 'auto';
+                        audio.addEventListener('loadedmetadata', function() {
+                            document.getElementById(type + 'Duration').textContent = formatTime(audio.duration);
+                        });
+                        audioPlayers[type] = audio;
+                        audioLoaded[type] = true;
+                        // 사용자가 로딩 중에 버튼을 눌렀다면 바로 재생
+                        if (pendingPlay[type]) {
+                            pendingPlay[type] = false;
+                            playPause(type);
+                        }
+                    })
+                    .catch(function(err) {
+                        audioLoading[type] = false;
+                        console.error('Preload fetch error:', err);
+                    });
+            });
         }
 
         function togglePlayer(type) {
@@ -216,6 +248,7 @@
                     if (audioPlayers[t]) { audioPlayers[t].pause(); }
                     var pb = document.getElementById(t + 'PlayBtn');
                     if (pb) pb.textContent = '▶';
+                    pendingPlay[t] = false;
                 }
             });
             if (isOpen) {
@@ -224,6 +257,7 @@
                 if (audioPlayers[type]) audioPlayers[type].pause();
                 var playBtn = document.getElementById(type + 'PlayBtn');
                 if (playBtn) playBtn.textContent = '▶';
+                pendingPlay[type] = false;
             } else {
                 wrap.classList.add('open');
                 btn.classList.add('expanded');
@@ -232,57 +266,36 @@
         }
 
         function loadAndPlay(type) {
-            // 이미 로딩된 경우 바로 재생
+            // 이미 로딩 완료 → 바로 재생
             if (audioLoaded[type]) {
-                playPause(type);
+                // ★ 사용자 터치 시점에 play() 호출해야 모바일 자동재생 허용
+                var audio = audioPlayers[type];
+                if (audio) {
+                    audio.play().then(function() {
+                        var playBtn = document.getElementById(type + 'PlayBtn');
+                        var btn = document.getElementById('btn' + type.charAt(0).toUpperCase() + type.slice(1));
+                        playBtn.textContent = '⏸';
+                        btn.classList.add('playing');
+                        startProgress(type);
+                    }).catch(function(){});
+                }
+                var loadingEl = document.getElementById(type + 'Loading');
+                if (loadingEl) loadingEl.style.display = 'none';
                 return;
             }
-            var fileId = audioFileIds[type];
-            if (!fileId) return;
-
-            // ★ 핵심: 사용자 터치 시점에 Audio를 만들고 play() 호출
-            // 무음 data URI로 재생해서 브라우저의 자동재생 잠금을 해제
-            var audio = new Audio('data:audio/wav;base64,UklGRiQAAABXQVZFZm10IBAAAAABAAEARKwAAIhYAQACABAAZGF0YQAAAAA=');
-            audio.play().catch(function(){});
-            audioPlayers[type] = audio;
-
+            // 아직 로딩 중 → 로딩 표시 + 완료되면 자동 재생 예약
             var loadingEl = document.getElementById(type + 'Loading');
             if (loadingEl) loadingEl.style.display = 'block';
-
-            fetch(PROXY_URL + '?id=' + fileId)
-                .then(function(r) { return r.json(); })
-                .then(function(data) {
-                    if (loadingEl) loadingEl.style.display = 'none';
-                    if (data.error) {
-                        console.error('Proxy error:', data.error);
-                        return;
-                    }
-                    // 같은 Audio 객체의 src만 교체 → 자동재생 잠금 우회
-                    audio.src = data.uri;
-                    audio.addEventListener('loadedmetadata', function() {
-                        document.getElementById(type + 'Duration').textContent = formatTime(audio.duration);
-                    });
-                    audio.play().catch(function(){});
-                    audioLoaded[type] = true;
-
-                    var playBtn = document.getElementById(type + 'PlayBtn');
-                    var btn = document.getElementById('btn' + type.charAt(0).toUpperCase() + type.slice(1));
-                    playBtn.textContent = '⏸';
-                    btn.classList.add('playing');
-                    startProgress(type);
-                })
-                .catch(function(err) {
-                    if (loadingEl) loadingEl.style.display = 'none';
-                    console.error('Fetch error:', err);
-                });
+            pendingPlay[type] = true;
         }
-
 
         function playPause(type) {
             var audio = audioPlayers[type];
             if (!audio) return;
             var playBtn = document.getElementById(type + 'PlayBtn');
             var btn = document.getElementById('btn' + type.charAt(0).toUpperCase() + type.slice(1));
+            var loadingEl = document.getElementById(type + 'Loading');
+            if (loadingEl) loadingEl.style.display = 'none';
             if (audio.paused) {
                 ['theme', 'voice', 'healing'].forEach(function(t) {
                     if (t !== type && audioPlayers[t]) {
@@ -293,7 +306,7 @@
                         if (bb) bb.classList.remove('playing');
                     }
                 });
-                audio.play();
+                audio.play().catch(function(){});
                 playBtn.textContent = '⏸';
                 btn.classList.add('playing');
                 startProgress(type);
@@ -411,6 +424,10 @@
 
                 document.getElementById('loading').style.display = 'none';
                 document.getElementById('certificate').style.display = 'block';
+
+                // ★ 보증서 표시 직후 모든 음원을 백그라운드에서 미리 로딩
+                preloadAllAudio();
+
             } catch (e) {
                 showError();
             }
