--- a/index.html
+++ b/index.html
@@ -69,10 +69,100 @@
         .player-loading { text-align: center; color: #8a7a5a; font-size: 12px; padding: 10px 0; }
         .player-loading .mini-spinner { display: inline-block; width: 14px; height: 14px; border: 2px solid #c9a84c33; border-top: 2px solid #c9a84c; border-radius: 50%; animation: spin 1s linear infinite; margin-right: 6px; vertical-align: middle; }
 
-        /* ── PDF 뷰어 스타일 ── */
-        .pdf-viewer-container { width: 100%; border-radius: 4px; overflow: hidden; margin-bottom: 12px; }
-        .pdf-frame { width: 100%; height: 70vh; border: none; border-radius: 4px; background: #1a1a2e; }
-        .pdf-controls { display: flex; justify-content: center; gap: 12px; }
+        /* ── PDF 전체화면 뷰어 오버레이 ── */
+        .pdf-overlay {
+            display: none;
+            position: fixed;
+            top: 0; left: 0; right: 0; bottom: 0;
+            z-index: 9999;
+            background: #0a0a14;
+            flex-direction: column;
+        }
+        .pdf-overlay.open { display: flex; }
+        .pdf-overlay-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding: 12px 16px;
+            background: #0f0f1a;
+            border-bottom: 1px solid #c9a84c33;
+            flex-shrink: 0;
+        }
+        .pdf-overlay-title {
+            font-size: 14px;
+            color: #c9a84c;
+            font-weight: 500;
+            letter-spacing: 1px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            flex: 1;
+            margin-right: 12px;
+        }
+        .pdf-overlay-actions {
+            display: flex;
+            gap: 8px;
+            flex-shrink: 0;
+        }
+        .pdf-overlay-btn {
+            padding: 6px 14px;
+            border: 1px solid #c9a84c44;
+            border-radius: 20px;
+            background: transparent;
+            color: #8a7a5a;
+            font-size: 12px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: all 0.2s;
+            display: inline-flex;
+            align-items: center;
+            gap: 4px;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+        .pdf-overlay-btn:hover { color: #c9a84c; border-color: #c9a84c66; }
+        .pdf-overlay-close {
+            width: 36px;
+            height: 36px;
+            border: 1px solid #c9a84c44;
+            border-radius: 50%;
+            background: transparent;
+            color: #c9a84c;
+            font-size: 20px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.2s;
+            flex-shrink: 0;
+        }
+        .pdf-overlay-close:hover { background: #c9a84c22; border-color: #c9a84c; }
+        .pdf-overlay-body {
+            flex: 1;
+            overflow: hidden;
+        }
+        .pdf-overlay-frame {
+            width: 100%;
+            height: 100%;
+            border: none;
+            background: #1a1a2e;
+        }
+        .pdf-overlay-loading {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            color: #8a7a5a;
+            font-size: 14px;
+            flex-direction: column;
+            gap: 16px;
+        }
+        .pdf-overlay-loading .spinner {
+            width: 32px; height: 32px;
+            border: 2px solid #c9a84c33;
+            border-top: 2px solid #c9a84c;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
     </style>
 </head>
 <body>
@@ -92,22 +182,10 @@
             <div class="message" id="message">귀하의 사주 오행과 MBTI 심리 유형을<br>분석하여 조율된 맞춤형 솔루션입니다</div>
             <div class="buttons" id="buttons">
 
-                <!-- ★ PDF 뷰어 (인앱 미리보기 + 다운로드/새탭) -->
+                <!-- PDF 버튼 (클릭하면 전체화면 뷰어 열림) -->
                 <div class="btn-item" id="pdfItem">
-                    <div class="btn" id="btnPdf" onclick="togglePdfViewer()">
+                    <div class="btn" id="btnPdf" onclick="openPdfViewer()">
                         <span class="icon">📜</span><span id="btnPdfText">사주 분석 리포트</span>
-                    </div>
-                    <div class="player-wrap" id="pdfViewerWrap">
-                        <div class="player-loading" id="pdfLoading" style="display:none;">
-                            <span class="mini-spinner"></span>리포트를 불러오는 중...
-                        </div>
-                        <div class="pdf-viewer-container" id="pdfContainer" style="display:none;">
-                            <iframe id="pdfFrame" class="pdf-frame" src="" allow="autoplay"></iframe>
-                        </div>
-                        <div class="pdf-controls">
-                            <a href="#" class="player-download" id="pdfDownload" target="_blank">⬇ 다운로드</a>
-                            <a href="#" class="player-download" id="pdfNewTab" target="_blank">↗ 새 탭에서 보기</a>
-                        </div>
                     </div>
                 </div>
 
@@ -184,6 +262,25 @@
             <div class="footer"><div class="divider"></div><div class="footer-brand">나를읽다 연구소</div><div class="footer-sub">사주 & MBTI 운명 분석</div></div>
         </div>
     </div>
+
+    <!-- ★ PDF 전체화면 오버레이 (body 바로 안, container 밖) -->
+    <div class="pdf-overlay" id="pdfOverlay">
+        <div class="pdf-overlay-header">
+            <div class="pdf-overlay-title" id="pdfOverlayTitle">📜 사주 분석 리포트</div>
+            <div class="pdf-overlay-actions">
+                <a href="#" class="pdf-overlay-btn" id="pdfOverlayDownload" target="_blank">⬇</a>
+                <button class="pdf-overlay-close" id="pdfOverlayClose" onclick="closePdfViewer()">✕</button>
+            </div>
+        </div>
+        <div class="pdf-overlay-body" id="pdfOverlayBody">
+            <div class="pdf-overlay-loading" id="pdfOverlayLoading">
+                <div class="spinner"></div>
+                <span>리포트를 불러오는 중...</span>
+            </div>
+            <iframe class="pdf-overlay-frame" id="pdfOverlayFrame" src="" style="display:none;"></iframe>
+        </div>
+    </div>
+
     <script>
         const CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSLwX3_NEYRLeNv8UmKxsL9vrTHmHwMcSWtu7uGuIUyV79m8Qhw6jLJtxOPjIEzxNt1Ks7nqYaKnlb2/pub?gid=0&single=true&output=csv';
         const PROXY_URL = 'https://script.google.com/macros/s/AKfycby39MMYoXJIekh9cw-JZpHhmp_AiYCXiYVFIKpqeIcRKreuApLn_Y1CE7Sk6FVEEowjnA/exec';
@@ -208,77 +305,71 @@
             if (m) return m[1];
             m = url.match(/drive\.google\.com\/open\?id=([a-zA-Z0-9_-]+)/);
             if (m) return m[1];
+            m = url.match(/docs\.google\.com\/document\/d\/([a-zA-Z0-9_-]+)/);
+            if (m) return m[1];
             return null;
         }
 
-        /* ── PDF 뷰어 ── */
-        var pdfViewerOpen = false;
-        var pdfLoaded = false;
-        var pdfEmbedUrl = '';
+        /* ── PDF 전체화면 뷰어 ── */
+        var pdfViewerData = { embedUrl: '', downloadUrl: '', title: '' };
 
         function buildPdfUrls(rawUrl) {
-            if (!rawUrl) return { embed: '', download: '', view: '' };
-            var docsMatch = rawUrl.match(/docs\.google\.com\/document\/d\/([a-zA-Z0-9_-]+)/);
-            if (docsMatch) {
-                var docId = docsMatch[1];
+            if (!rawUrl) return { embed: '', download: '' };
+            var fileId = extractFileId(rawUrl);
+            if (!fileId) return { embed: rawUrl, download: rawUrl };
+
+            // Google Docs 문서인 경우
+            var isDoc = rawUrl.indexOf('docs.google.com/document') !== -1;
+            if (isDoc) {
                 return {
-                    embed: 'https://drive.google.com/file/d/' + docId + '/preview',
-                    download: 'https://docs.google.com/document/d/' + docId + '/export?format=pdf',
-                    view: 'https://docs.google.com/document/d/' + docId + '/edit'
+                    embed: 'https://docs.google.com/document/d/' + fileId + '/preview',
+                    download: 'https://docs.google.com/document/d/' + fileId + '/export?format=pdf'
                 };
             }
-            var driveMatch = rawUrl.match(/drive\.google\.com\/file\/d\/([a-zA-Z0-9_-]+)/);
-            if (!driveMatch) {
-                var openMatch = rawUrl.match(/drive\.google\.com\/open\?id=([a-zA-Z0-9_-]+)/);
-                if (openMatch) driveMatch = [null, openMatch[1]];
-            }
-            if (driveMatch) {
-                var fileId = driveMatch[1];
-                return {
-                    embed: 'https://drive.google.com/file/d/' + fileId + '/preview',
-                    download: 'https://drive.google.com/uc?export=download&id=' + fileId,
-                    view: 'https://drive.google.com/file/d/' + fileId + '/view'
-                };
-            }
-            return { embed: rawUrl, download: rawUrl, view: rawUrl };
+            // Google Drive 파일인 경우
+            return {
+                embed: 'https://drive.google.com/file/d/' + fileId + '/preview',
+                download: 'https://drive.google.com/uc?export=download&id=' + fileId
+            };
         }
 
-        function togglePdfViewer() {
-            var wrap = document.getElementById('pdfViewerWrap');
-            var btn = document.getElementById('btnPdf');
-            var isOpen = wrap.classList.contains('open');
+        function openPdfViewer() {
+            if (!pdfViewerData.embedUrl) return;
 
-            // 다른 플레이어 닫기
+            var overlay = document.getElementById('pdfOverlay');
+            var frame   = document.getElementById('pdfOverlayFrame');
+            var loading = document.getElementById('pdfOverlayLoading');
+
+            document.getElementById('pdfOverlayTitle').textContent = '📜 ' + pdfViewerData.title;
+            document.getElementById('pdfOverlayDownload').href = pdfViewerData.downloadUrl;
+
+            // 음원 재생 중이면 정지
             ['theme', 'voice', 'healing'].forEach(function(t) {
-                var w = document.getElementById('player' + t.charAt(0).toUpperCase() + t.slice(1));
-                var b = document.getElementById('btn' + t.charAt(0).toUpperCase() + t.slice(1));
-                if (w) { w.classList.remove('open'); }
-                if (b) { b.classList.remove('expanded', 'playing'); }
-                if (audioPlayers[t]) { audioPlayers[t].pause(); }
+                if (audioPlayers[t]) audioPlayers[t].pause();
                 var pb = document.getElementById(t + 'PlayBtn');
+                var bb = document.getElementById('btn' + t.charAt(0).toUpperCase() + t.slice(1));
                 if (pb) pb.textContent = '▶';
+                if (bb) bb.classList.remove('playing');
             });
 
-            if (isOpen) {
-                wrap.classList.remove('open');
-                btn.classList.remove('expanded');
-            } else {
-                wrap.classList.add('open');
-                btn.classList.add('expanded');
-                if (!pdfLoaded && pdfEmbedUrl) {
-                    var loadingEl = document.getElementById('pdfLoading');
-                    var container = document.getElementById('pdfContainer');
-                    loadingEl.style.display = 'block';
-                    container.style.display = 'none';
-                    var frame = document.getElementById('pdfFrame');
-                    frame.onload = function() {
-                        loadingEl.style.display = 'none';
-                        container.style.display = 'block';
-                        pdfLoaded = true;
-                    };
-                    frame.src = pdfEmbedUrl;
-                }
-            }
+            loading.style.display = 'flex';
+            frame.style.display = 'none';
+            overlay.classList.add('open');
+            document.body.style.overflow = 'hidden';
+
+            frame.onload = function() {
+                loading.style.display = 'none';
+                frame.style.display = 'block';
+            };
+            frame.src = pdfViewerData.embedUrl;
+        }
+
+        function closePdfViewer() {
+            var overlay = document.getElementById('pdfOverlay');
+            var frame   = document.getElementById('pdfOverlayFrame');
+            overlay.classList.remove('open');
+            document.body.style.overflow = '';
+            frame.src = '';
         }
 
         /* ── 오디오 관리 ── */
@@ -298,13 +389,6 @@
             var wrap = document.getElementById('player' + type.charAt(0).toUpperCase() + type.slice(1));
             var btn = document.getElementById('btn' + type.charAt(0).toUpperCase() + type.slice(1));
             var isOpen = wrap.classList.contains('open');
-
-            // PDF 뷰어 닫기
-            var pdfWrap = document.getElementById('pdfViewerWrap');
-            var pdfBtn = document.getElementById('btnPdf');
-            if (pdfWrap) { pdfWrap.classList.remove('open'); }
-            if (pdfBtn) { pdfBtn.classList.remove('expanded'); }
-
             ['theme', 'voice', 'healing'].forEach(function(t) {
                 var w = document.getElementById('player' + t.charAt(0).toUpperCase() + t.slice(1));
                 var b = document.getElementById('btn' + t.charAt(0).toUpperCase() + t.slice(1));
@@ -469,13 +553,13 @@
                 }
                 var subtitleText = isCouple ? '두 분을 위한' : '당신만을 위한';
 
-                /* ★ PDF — 인앱 뷰어 방식 */
+                /* ★ PDF — 전체화면 뷰어 방식 */
                 if (pdfLink) {
                     var pdfUrls = buildPdfUrls(pdfLink);
-                    pdfEmbedUrl = pdfUrls.embed;
+                    pdfViewerData.embedUrl = pdfUrls.embed;
+                    pdfViewerData.downloadUrl = pdfUrls.download;
+                    pdfViewerData.title = pdfName || '사주 분석 리포트';
                     document.getElementById('btnPdf').classList.add('active');
-                    document.getElementById('pdfDownload').href = pdfUrls.download;
-                    document.getElementById('pdfNewTab').href = pdfUrls.view;
                     if (pdfName) document.getElementById('btnPdfText').textContent = pdfName;
                 }
 
